--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,48 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --rehoboth-dark-green: #163f1b; /* Example: Green */
+  --rehoboth-light-green: #b7c8b9;
+  --rehoboth-yellow: #ffcc53;
+  --rehoboth-white: #ffffff;
+  --rehoboth-grey: #ececec;
+
+
+  --naamani-black: #3c3840;
+
+
+  --naamani-coffee: #543d1f;
+  --naamani-caramel: #ccaa96;
+  --naamani-grey-extra-light: #f7f8f8;
+  --nammani-font-dark: #333333;
+
+  --font-default: var(--font-fira-sans); /* Default font */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+  /* font-family: var(--font-geist-sans), sans-serif; */
+  font-family: var(--font-fira-sans), sans-serif;
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+
+
+p {
+  font-family: var(--font-nunito), sans-serif;
+  font-weight: 300;
+  font-size: 1.1rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-eb-garamond), sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.9px;
+}
+
+.main {
+  padding-top: 4rem; /* Offset for fixed header */
+  font-family: var(--font-nunito), sans-serif;
 }
