working on home pg UI

--- a/src/app/components/navigation/styles.module.css
+++ b/src/app/components/navigation/styles.module.css
@@ -33,7 +33,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  max-width: 1080px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -69,6 +69,7 @@
 .navLinks {
   display: flex;
   gap: 1rem;
+  color: var(--rehoboth-white);
 }
 
 .navLink {
@@ -135,6 +136,7 @@
   width: 16rem;
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
+  background-color: var(--rehoboth-dark-green);
 }
 
 .drawerLeft.active {
@@ -164,7 +166,7 @@
   border: none;
   font-size: 3rem;
   cursor: pointer;
-  color: var(--naamani-purple);
+  color: var(--rehoboth-white);
 }
 
 .cartItemImage {
