--- a/src/app/components/marquee/styles.module.css
+++ b/src/app/components/marquee/styles.module.css
@@ -35,7 +35,7 @@
   /* Scrolling animation */
   @keyframes scroll {
     0% {
-      transform: translateX(0%);
+      transform: translateX(0);
     }
     100% {
       transform: translateX(-100%);
