--- a/src/app/components/sections/latest-sermons/styles.module.css
+++ b/src/app/components/sections/latest-sermons/styles.module.css
@@ -163,6 +163,7 @@
   @media screen and (max-width: 768px) {
     .sermonGrid {
       grid-template-columns: 1fr;
+      gap: 5rem;
     }
   
     .video {
