--- a/src/app/components/sections/latest-sermons/styles.module.css
+++ b/src/app/components/sections/latest-sermons/styles.module.css
@@ -104,6 +104,7 @@
     padding: 10px 20px;
     cursor: pointer;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 10px;
     transition: all 0.3s ease-in-out;
