--- a/src/app/components/sections/latest-sermons/styles.module.css
+++ b/src/app/components/sections/latest-sermons/styles.module.css
@@ -100,7 +100,7 @@
     background-color: #2d422d; /* Dark Green */
     color: #ffffff;
     border: none;
-    border-radius: 25px;
+    border-radius: 35px;
     padding: 10px 20px;
     cursor: pointer;
     display: flex;
@@ -117,6 +117,13 @@
   
   .playIcon {
     font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    height: 35px;
+    width: 35px;
+    background: var(--rehoboth-white);
   }
   
   /* Modal */
@@ -136,7 +143,7 @@
   .modalContent {
     position: relative;
     background: #fff;
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     max-width: 800px;
     width: 100%;
@@ -151,13 +158,14 @@
   
   .closeButton {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    background: transparent;
-    color: #2d422d;
-    font-size: 1.5rem;
+    top: 5px;
+    right: 5px;
+    background: var(--rehoboth-white);
+    color: var(--rehoboth-dark-green);
+    font-size: 1.3rem;
     border: none;
     cursor: pointer;
+    border-radius: 100%;   
   }
   
   /* Responsive */
