--- a/src/app/components/sections/latest-sermons/styles.module.css
+++ b/src/app/components/sections/latest-sermons/styles.module.css
@@ -166,6 +166,11 @@
     border: none;
     cursor: pointer;
     border-radius: 100%;   
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   /* Responsive */
