--- a/src/app/components/sections/about/mission-vision-story/styles.module.css
+++ b/src/app/components/sections/about/mission-vision-story/styles.module.css
@@ -25,7 +25,8 @@
     font-weight: bold;
     font-size: 2rem;
     color: #2d422d;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    margin-top: 0rem;
   }
   
   .highlight {
@@ -36,21 +37,30 @@
   .tabContainer {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 2rem;
   }
   
   .tabButton {
     font-family: 'Fira Sans', sans-serif;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 12px 35px;
     border: none;
     border-radius: 25px;
-    background-color: #fff;
+    background-color: #fff8e5;
     color: #2d422d;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+  }
+
+  .tabWrapper {
+    background-color: var(--rehoboth-white);
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem;
+    border-radius: 35px;
   }
   
   .tabButton:hover {
@@ -120,6 +130,10 @@
     }
 
     .tabButton {
-        font-size: .9rem;
+        font-size: .95rem;
+    }
+
+    .tabWrapper {
+        gap: 10px;
     }
   }
