--- a/src/app/components/sections/about/pastor-message/styles.module.css
+++ b/src/app/components/sections/about/pastor-message/styles.module.css
@@ -51,7 +51,7 @@
     font-weight: bold;
     font-size: 2rem;
     color: #2d422d; /* Dark Green */
-    margin-bottom: 20px;
+    margin: 0 0 20px 0;
   }
   
   .highlight {
