--- a/src/app/components/sections/home/events/styles.module.css
+++ b/src/app/components/sections/home/events/styles.module.css
@@ -52,7 +52,7 @@
     font-weight: bold;
     font-size: 2rem;
     color: #2d422d; /* Dark Green */
-    margin-bottom: 20px;
+    margin: 0 0 20px 0;
   }
   
   .highlight {
