--- a/src/app/components/sections/home/latest-sermons/styles.module.css
+++ b/src/app/components/sections/home/latest-sermons/styles.module.css
@@ -24,6 +24,7 @@
     font-weight: bold;
     font-size: 2rem;
     color: #2d422d; /* Dark Green */
+    margin: 0 0 20px 0;
   }
   
   .highlight {
