--- a/src/app/components/sections/home/worship-with-us/styles.module.css
+++ b/src/app/components/sections/home/worship-with-us/styles.module.css
@@ -74,6 +74,7 @@
   background-color: rgba(255, 255, 255, 1);
   padding: 20px;
   border-radius: 0 0 15px 15px;
+  box-sizing: border-box;
   width: 100%;
 }
 
@@ -93,6 +94,8 @@
   color: #2d422d; /* Dark Green */
   margin-bottom: 15px;
   text-align: left;
+  box-sizing: border-box;
+  /* width: 90%; */
 }
 
 /* Button */
@@ -227,5 +230,9 @@
 
   .imageCard {
     width: auto;
+  }
+
+  .image {
+    height: 50vh;
   }
 }
