--- a/src/app/components/sections/blog/articles/styles.module.css
+++ b/src/app/components/sections/blog/articles/styles.module.css
@@ -1,151 +1,164 @@
 /* Section Styling */
 .cardGridSection {
-    padding: 100px 20px;
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  padding: 50px 20px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Filters */
+.filters {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+  width: 90%;
+  max-width: 1200px;
+  gap: 10px;
+  background-color: #e0e0e0;
+  padding: 1.5rem;
+  border-radius: 10px;
+  /* box-sizing: border-box; */
+}
+
+.searchInput {
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  flex: 1;
+}
+
+.filterDropdown {
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+}
+
+/* Grid Layout */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  max-width: 1200px;
+  width: 100%;
+}
+
+.heading {
+  font-family: "Fira Sans", sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--rehoboth-dark-green);
+  margin: 0 0 30px 0;
+  letter-spacing: 0;
+}
+
+.highlight {
+    color: var(--rehoboth-yellow); /* Yellow Highlight */
   }
-  
-  /* Filters */
+
+/* Card Styling */
+.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  max-width: 400px;
+}
+
+.image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.cardContent {
+  padding: 20px;
+}
+
+.title {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.date {
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.link {
+  font-family: "Fira Sans", sans-serif;
+  font-weight: bold;
+  font-size: 0.9rem;
+  color: var(--rehoboth-dark-green); /* Orange Highlight */
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+  transition: color 0.3s ease;
+}
+
+.link:hover {
+  color: #2d422d; /* Dark Green */
+}
+
+.arrow {
+  font-size: 1rem;
+  transition: transform 0.3s ease;
+}
+
+.link:hover .arrow {
+  transform: translateX(5px);
+}
+/* Pagination */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.pageButton {
+  padding: 15px 20px;
+  border: 1px solid #e0e0e0;
+  background-color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 1.1rem;
+  font-family: var(--font-default);
+  color: var(--rehoboth-dark-green);
+  border-radius: 5px;
+}
+
+.pageButton:hover {
+  background-color: var(--rehoboth-yellow);
+}
+
+.activePage {
+  background-color: #2d422d; /* Dark Green */
+  color: var(--rehoboth-white);
+  border: 1px solid #e0e0e0;
+}
+
+.monthFilterLabel {
+  text-align: left;
+}
+
+@media screen and (max-width: 768px) {
   .filters {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 40px;
-    width: 90%;
-    max-width: 1200px;
-    gap: 10px;
-    background-color: #e0e0e0;
-    padding: 1.5rem;
-    border-radius: 10px;
-    /* box-sizing: border-box; */
-  }
-  
-  .searchInput {
-    padding: 10px;
-    font-size: 1rem;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-    flex: 1;
-  }
-  
-  .filterDropdown {
-    padding: 10px;
-    font-size: 1rem;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-  }
-  
-  /* Grid Layout */
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    max-width: 1200px;
-    width: 100%;
-  }
-  
-  /* Card Styling */
-  .card {
-    display: flex;
     flex-direction: column;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    max-width: 400px;
   }
-  
-  .image {
+
+  .searchInput {
+    width: 95%;
+  }
+
+  .filterDropdown {
     width: 100%;
-    height: auto;
-    object-fit: cover;
   }
-  
-  .cardContent {
-    padding: 20px;
-  }
-  
-  .title {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .date {
-    font-size: 0.9rem;
-    color: #555;
-  }
-
-  .link {
-    font-family: 'Fira Sans', sans-serif;
-    font-weight: bold;
-    font-size: 0.9rem;
-    color: var(--rehoboth-dark-green); /* Orange Highlight */
-    text-decoration: none;
-    display: inline-flex;
-    align-items: center;
-    gap: 5px;
-    transition: color 0.3s ease;
-  }
-  
-  .link:hover {
-    color: #2d422d; /* Dark Green */
-  }
-  
-  .arrow {
-    font-size: 1rem;
-    transition: transform 0.3s ease;
-  }
-  
-  .link:hover .arrow {
-    transform: translateX(5px);
-  }
-  /* Pagination */
-  .pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    gap: 10px;
-  }
-  
-  .pageButton {
-    padding: 15px 20px;
-    border: 1px solid #e0e0e0;
-    background-color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-size: 1.1rem;
-    font-family: var(--font-default);
-    color: var(--rehoboth-dark-green);
-    border-radius: 5px;
-  }
-  
-  .pageButton:hover {
-    background-color: var(--rehoboth-yellow);
-  }
-  
-  .activePage {
-    background-color: #2d422d; /* Dark Green */
-    color: var(--rehoboth-white);
-    border: 1px solid #e0e0e0;
-  }
-
-  .monthFilterLabel {
-    text-align: left;
-  }
-
-  @media screen and (max-width: 768px) {
-    .filters {
-        flex-direction: column;
-    }
-
-    .searchInput {
-        width: 95%;
-    }
-
-    .filterDropdown {
-        width: 100%;
-    }
-  }
+}
