--- a/src/app/components/sections/home/latest-sermons/styles.module.css
+++ b/src/app/components/sections/home/latest-sermons/styles.module.css
@@ -1,7 +1,7 @@
 /* Section Styling */
 .sermonsSection {
     padding: 60px 20px;
-    background-color: #f9f9f9;
+    background-color: #ececec;
     text-align: center;
     font-family: var(--font-fira-sans) !important;
   }
