--- a/src/app/components/sections/home/worship-with-us/styles.module.css
+++ b/src/app/components/sections/home/worship-with-us/styles.module.css
@@ -1,7 +1,7 @@
 /* Section Container */
 .section {
   padding: 40px 20px;
-  background-color: #f9f9f9;
+  background-color: #ececec;
   text-align: center;
 }
 
