--- a/src/app/components/footer/style.module.css
+++ b/src/app/components/footer/style.module.css
@@ -81,7 +81,7 @@
   .footerBottom {
     text-align: center;
     margin-top: 20px;
-    border-top: 1px solid #ffffff;
+    border-top: 1px solid #9797977b;
     padding-top: 10px;
     font-size: 14px;
     font-family: var(--font-fira-sans), sans-serif;
