--- a/src/app/components/sections/events/calendar/styles.module.css
+++ b/src/app/components/sections/events/calendar/styles.module.css
@@ -1,222 +1,236 @@
 .eventsPage {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
-  .mainHeader {
-    font-weight: bold;
-    color: var(--rehoboth-dark-green);
-  }
-  
-  .tabs {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .tabButton {
-    padding: 10px 20px;
-    font-size: 1rem;
-    background: #f0f0f0;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .tabButton:hover {
-    background: #ddd;
-  }
-  
-  .activeTab {
-    background: #2d422d;
-    color: white;
-  }
-  
-  .tabContent {
-    margin-top: 4rem;
-  }
-  
+.mainHeader {
+  font-weight: bold;
+  color: var(--rehoboth-dark-green);
+}
+
+.tabs {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.tabButton {
+  padding: 10px 20px;
+  font-size: 1rem;
+  background: #f0f0f0;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.tabButton:hover {
+  background: #ddd;
+}
+
+.activeTab {
+  background: #2d422d;
+  color: white;
+}
+
+.tabContent {
+  margin-top: 4rem;
+}
+
+.upcomingEvent {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* display: flex; */
+  gap: 3rem;
+  margin: 4rem 0;
+}
+
+.eventContentWrapper {
+  text-align: left;
+}
+
+.eventContentWrapper h2 {
+  margin: 0;
+}
+
+.eventImage {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.eventTitle {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color: #2d422d;
+}
+
+.eventDateTime,
+.eventLocation,
+.eventDescription {
+  margin-bottom: 10px;
+  color: #555;
+}
+
+.calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 10px;
+}
+
+.calendarWrapper {
+  border-radius: 5px;
+  padding: 1rem;
+  background-color: #eaeeeb;
+  margin-bottom: 3rem;
+}
+
+.day {
+  padding: 10px;
+  text-align: center;
+  background: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.day:hover {
+  background: #ddd;
+}
+
+.eventDay {
+  background: #2d422d;
+  color: white;
+}
+
+.selectedDateDetails {
+  margin: 4rem 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.selectedDateDetails h3 {
+  font-weight: 600;
+  margin: 0;
+}
+
+.selectedDateDetails h4 {
+  margin-top: 0.25rem;
+}
+
+.eventDetails {
+  margin-bottom: 15px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.monthHeader {
+  /* text-align: center; */
+  font-size: 1.5rem;
+  margin: 3rem 0;
+  color: #2d422d;
+}
+
+.dayHeaders {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 5px;
+  font-weight: bold;
+  color: #555;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.dayHeader {
+  font-size: 0.9rem;
+  text-transform: uppercase;
+}
+
+.monthDropdown {
+  margin: 10px 0;
+  display: block;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 1rem;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  width: 200px;
+}
+
+.emptyDay {
+  visibility: hidden;
+}
+
+.calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 10px;
+}
+
+.placeholder {
+  height: 350px;
+  /* width: 550px; */
+  background-color: grey;
+  border-radius: 8px;
+}
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 700px;
+  /* text-align: center; */
+  position: relative;
+  opacity: 0;
+  transform: scale(0.95);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.modalAnimation {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
   .upcomingEvent {
     text-align: center;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     /* display: flex; */
     gap: 3rem;
     margin: 4rem 0;
   }
 
-  .eventContentWrapper {
-   
-    text-align: left;
-  }
-  
-  .eventContentWrapper h2{
-    margin: 0;
-  }
-
-  .eventImage {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .eventTitle {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    color: #2d422d;
-  }
-  
-  .eventDateTime,
-  .eventLocation,
-  .eventDescription {
-    margin-bottom: 10px;
-    color: #555;
-  }
-  
-  .calendar {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
-  }
-
-.calendarWrapper {
-    border-radius: 5px;
-    padding: 1rem;
-    background-color: #eaeeeb;
-    margin-bottom: 3rem;
-}
-  
-  .day {
-    padding: 10px;
-    text-align: center;
-    background: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .day:hover {
-    background: #ddd;
-  }
-  
-  .eventDay {
-    background: #2d422d;
-    color: white;
-  }
-  
-  .selectedDateDetails {
-    margin: 4rem 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
-  }
-
-  .selectedDateDetails h3 {
-    font-weight: 600;
-    margin: 0;
-  }
-
-  .selectedDateDetails h4 {
-    margin-top: .25rem;
-  }
-  
-  .eventDetails {
-    margin-bottom: 15px;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 1rem;
-  }
-
-  .monthHeader {
-    /* text-align: center; */
-    font-size: 1.5rem;
-    margin: 3rem 0;
-    color: #2d422d;
-  }
-  
-  .dayHeaders {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 5px;
-    font-weight: bold;
-    color: #555;
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-  
-  .dayHeader {
-    font-size: 0.9rem;
-    text-transform: uppercase;
-  }
-  
-  .monthDropdown {
-    margin: 10px 0;
-    display: block;
-    padding: 10px;
-    border-radius: 5px;
-    font-size: 1rem;
-    background-color: #f0f0f0;
-    border: 1px solid #ddd;
-    width: 200px;
-  }
-  
-  .emptyDay {
-    visibility: hidden;
-  }
-  
-  .calendar {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
-  }
-
-  .placeholder {
-    height: 350px;
-    /* width: 550px; */
-    background-color: grey;
-    border-radius: 8px;
-  }
-  
-  .modalOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-  }
-  
-  .modal {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
+  .calendarWrapper {
     width: 90%;
-    max-width: 700px;
-    /* text-align: center; */
-    position: relative;
-    opacity: 0;
-    transform: scale(0.95);
-    transition: opacity 0.3s ease, transform 0.3s ease;
   }
-  
-  .modalAnimation {
-    opacity: 1;
-    transform: scale(1);
-  }
-  
-  .closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 1.5rem;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
+}
