--- a/src/app/components/sections/programs/prayer/styles.module.css
+++ b/src/app/components/sections/programs/prayer/styles.module.css
@@ -118,3 +118,14 @@
 .sidebarWrapper {
   margin: 0 2rem;
 }
+
+
+@media screen and (max-width: 768px) {
+  .cardWrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    margin: 0 auto;
+    justify-content: center;
+  }
+}
