--- a/src/app/components/navigation/styles.module.css
+++ b/src/app/components/navigation/styles.module.css
@@ -299,12 +299,22 @@
   margin-bottom: 2rem;
 }
 
+.navLink {
+  font-size: 1rem;
+  text-decoration: none;
+  /* color: #333; */
+  /* padding: 10px 15px; */
+  transition: color 0.3s ease;
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   .navLinks {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     flex-direction: column;
+    align-items: flex-start;
+    margin-top: 3rem;
   }
 
   .cartItemImage {
@@ -315,7 +325,7 @@
 
   .navLink {
     margin: 0.5rem;
-    font-size: 1.75rem;
+    font-size: 1.65rem;
   }
   .mobileOnly {
     display: flex;
@@ -330,6 +340,30 @@
     flex-grow: unset;
     text-align: center;
   }
+}
+
+
+
+.submenu {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  gap: 10px;
+  background: transparent;
+  border-radius: 5px;
+  /* margin-top: 5px; */
+  /* padding: 10px; */
+}
+
+.submenuItem {
+  font-size: 0.9rem;
+  text-decoration: none;
+  color: var(--rehoboth-white);
+  padding: 5px;
+}
+
+.submenuItem:hover {
+  color: #2d422d;
 }
 
 @media (min-width: 769px) {
@@ -356,13 +390,7 @@
   position: relative; /* Required for the dropdown */
 }
 
-.navLink {
-  font-size: 1rem;
-  text-decoration: none;
-  /* color: #333; */
-  /* padding: 10px 15px; */
-  transition: color 0.3s ease;
-}
+
 
 .navLink:hover {
   /* text-decoration: underline; */
