--- a/src/app/components/sections/home/services/styles.module.css
+++ b/src/app/components/sections/home/services/styles.module.css
@@ -60,12 +60,12 @@
 
   .card:hover {
     transform: scale(1.05);
-    border: 4px solid var(--rehoboth-yellow);
-    background-color: #fcf5c3;
+    /* border: 4px solid var(--rehoboth-dark-green); */
+    background-color: #f1f4f1;
   }
 
   .card:hover .iconContainer {
-    background-color: var(--rehoboth-yellow);
+    background-color: #ddd;
   }
   
   .iconContainer {
